--- a/less/modules/off-screen-menu.less
+++ b/less/modules/off-screen-menu.less
@@ -266,10 +266,6 @@
                 .nav-item-off-screen-style();
                 .transition(none);
 
-                &:before {
-                    display: none;
-                }
-
                 &:after {
                     .position(absolute, 50%, @dimension-padding-base, ~'', ~'');
                     margin-top: -.5em;
